<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/lightbeige"
    tools:context=".ExercicioUm">

    <TextView
        android:id="@+id/txtViewMenu2"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:freezesText="true"
        android:gravity="center|center_vertical"
        android:text="@string/txtv2"
        android:textColor="@color/design_default_color_surface"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds,TextContrastCheck" />

    <EditText
        android:id="@+id/editN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="428dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/n1"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="336dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/n2"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnResult1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="229dp"
        android:backgroundTint="@color/brown"
        android:text="@string/check1"
        android:textSize="16sp"
        android:onClick="ChecarMultiplos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="180dp"
        android:text="@string/resultado1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResult1" />

</androidx.constraintlayout.widget.ConstraintLayout>